Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-97179

Assertion failure inside of QNetworkAccessManager thread

XMLWordPrintable

    • Windows
    • dd57605b9ef4e12805868962efce586e57e342b6 (qt/qtbase/dev) 8bb47a4adee0110acec5cc52611a25142e644dda (qt/qtbase/6.2) 62a1dbc81042fa8077f2b8c93490ef1410e2a715 (qt/tqtc-qtbase/5.15)

      Sometimes I'm getting the following assertion failure:

      ASSERT: "replyPrivate->decompressHelper.isValid()" in file \Users\qt\work\qt\qtbase\src\network\access\qhttp2protocolhandler.cpp, line 1282

      The corresponding stack trace is:

      1  qt_message_fatal                                  qlogging.cpp                            1887 0x7ffe5b890bf7 
      2  QMessageLogger::fatal                             qlogging.cpp                            891  0x7ffe5b88efd6 
      3  qt_assert                                         qglobal.cpp                             3281 0x7ffe5b87b2fd 
      4  QHttp2ProtocolHandler::updateStream               qhttp2protocolhandler.cpp               1284 0x7ffe5c9913fa 
      5  QHttp2ProtocolHandler::handleDATA                 qhttp2protocolhandler.cpp               629  0x7ffe5c98a7a5 
      6  QHttp2ProtocolHandler::_q_receiveReply            qhttp2protocolhandler.cpp               305  0x7ffe5c988aaa 
      7  QHttp2ProtocolHandler::_q_readyRead               qhttp2protocolhandler.cpp               269  0x7ffe5c988843 
      8  QHttpNetworkConnectionChannel::_q_readyRead       qhttpnetworkconnectionchannel.cpp       274  0x7ffe5c9fe4a8 
      9  QHttpNetworkConnectionChannel::qt_static_metacall moc_qhttpnetworkconnectionchannel_p.cpp 127  0x7ffe5c9ee90b 
      10 doActivate<0>                                     qobject.cpp                             3919 0x7ffe5bafa948 
      11 QMetaObject::activate                             qobject.cpp                             3965 0x7ffe5bae2bfc 
      12 QIODevice::readyRead                              moc_qiodevice.cpp                       196  0x7ffe5b914595 
      13 QTlsPrivate::TlsCryptographOpenSSL::transmit      qtls_openssl.cpp                        1053 0x7ffece14d2cd 
      14 QSslSocketPrivate::transmit                       qsslsocket.cpp                          2903 0x7ffe5caea511 
      15 QSslSocketPrivate::_q_readyReadSlot               qsslsocket.cpp                          2586 0x7ffe5cae9860 
      16 QSslSocket::qt_static_metacall                    moc_qsslsocket.cpp                      203  0x7ffe5caded2e 
      17 doActivate<0>                                     qobject.cpp                             3919 0x7ffe5bafa948 
      18 QMetaObject::activate                             qobject.cpp                             3965 0x7ffe5bae2bfc 
      19 QIODevice::readyRead                              moc_qiodevice.cpp                       196  0x7ffe5b914595 
      20 QAbstractSocketPrivate::emitReadyRead             qabstractsocket.cpp                     1263 0x7ffe5c918bb1 
      21 QAbstractSocketPrivate::canReadNotification       qabstractsocket.cpp                     704  0x7ffe5c915dde 
      22 QAbstractSocketPrivate::readNotification          qabstractsocket_p.h                     75   0x7ffe5c91e235 
      23 QAbstractSocketEngine::readNotification           qabstractsocketengine.cpp               157  0x7ffe5c91f19c 
      24 QReadNotifier::event                              qnativesocketengine.cpp                 1275 0x7ffe5c9282b1 
      25 QApplicationPrivate::notify_helper                qapplication.cpp                        3401 0x7ffe5f597e0f 
      26 QApplication::notify                              qapplication.cpp                        2760 0x7ffe5f59204e 
      27 QCoreApplication::notifyInternal2                 qcoreapplication.cpp                    1063 0x7ffe5ba0aaf5 
      28 QCoreApplication::sendEvent                       qcoreapplication.cpp                    1472 0x7ffe5ba081e3 
      29 qt_internal_proc                                  qeventdispatcher_win.cpp                193  0x7ffe5be468f9 
      30 CallWindowProcW                                   USER32                                       0x7ffee2d7e858 
      31 DispatchMessageW                                  USER32                                       0x7ffee2d7e299 
      32 QEventDispatcherWin32::processEvents              qeventdispatcher_win.cpp                543  0x7ffe5be47336 
      33 QEventLoop::processEvents                         qeventloop.cpp                          140  0x7ffe5ba30470 
      34 QEventLoop::exec                                  qeventloop.cpp                          232  0x7ffe5ba30742 
      35 QThread::exec                                     qthread.cpp                             544  0x7ffe5bc9d2d6 
      36 QThread::run                                      qthread.cpp                             614  0x7ffe5bc9d1d8 
      37 QThreadPrivate::start                             qthread_win.cpp                         334  0x7ffe5be620a5 
      38 BaseThreadInitThunk                               KERNEL32                                     0x7ffee1dc7034 
      39 RtlUserThreadStart                                ntdll                                        0x7ffee36c2651

      This was never happening with Qt 5.12.11.

      This crashes my debug version. I don't know if and how this bug affects release build.

       

        1. untitled9.zip
          2 kB
          Alexander Dyagilev
        For Gerrit Dashboard: QTBUG-97179
        # Subject Branch Project Status CR V

            tpochep Timur Pocheptsov
            alervd Alexander Dyagilev
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes