Http2: Handle failed read from QDecompressHelper

If the data is corrupt or the underlying library fails to read,
the decompressHelper gets reset and we must not try to call it
again. Emit an error since we cannot work with the data.

Task-number: QTBUG-97179
Change-Id: I62c49fb2fbb2cd942c82a08937f817b6c762c883
Reviewed-by: Edward Welbourne <edward.welbourne@qt.io>
Reviewed-by: Timur Pocheptsov <timur.pocheptsov@qt.io>